force-app/main/default/objects/Equipment_Maintenance_Item__c/Equipment_Maintenance_Item__c.object-meta.xml
<CustomObject>
    <label>Equipment Maintenance Item</label>
    <nameField>
        <displayFormat>PART-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Maintenance Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>