force-app/main/default/objects/Equipment_Maintenance_Item__c/fields/Maintenance_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cycle__c</fullName>
    <formula>Equipment__r.Maintenance_Cycle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Cycle (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>