force-app/main/default/objects/Equipment_Maintenance_Item__c/fields/Maintenance_Request__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Request__c</fullName>
    <label>Maintenance Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Equipment Maintenance Items</relationshipLabel>
    <relationshipName>Equipment_Maintenance_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>